--- a/lib/cfndsl/aws_types.yaml
+++ b/lib/cfndsl/aws_types.yaml
@@ -291,7 +291,7 @@ Resources:
     Name: String
     Type: String
     TTL: String
-    ResoureRecords: [ String ]
+    ResourceRecords: [ String ]
     Weight: Integer
     SetIdentifier: String
     AliasTarget: String
