--- a/lib/cfndsl/aws_types.yaml
+++ b/lib/cfndsl/aws_types.yaml
@@ -277,7 +277,7 @@ Resources:
     GroupDescription: String
     DBSecurityGroupIngress: RDSSecurityGroupRule
     EC2VpcId: String
-  "AWS::RDS::DBSecurityGroup" :
+  "AWS::RDS::DBSubnetGroup" :
    Properties:
     DBSubnetGroupDescription: String
     SubnetIds: [ String ]
