add iam isntance profile to ec2 instance

--- a/lib/cfndsl/aws_types.yaml
+++ b/lib/cfndsl/aws_types.yaml
@@ -97,6 +97,7 @@ Resources:
     DisableApiTermination: String
     ImageId: String
     InstanceType: String
+    IamInstanceProfile: String
     KernelId: String
     KeyName: String
     Monitoring: String
