--- a/lib/cfndsl/aws_types.yaml
+++ b/lib/cfndsl/aws_types.yaml
@@ -351,7 +351,7 @@ Types:
   VolumeSize: String
  NotificationConfiguration:
   TopicARN: String
-  NotificationType: [ String ]
+  NotificationTypes: [ String ]
  AutoScalingTags:
   Key: String
   Value: String
