add blockdevicemappings to ec2 instance

--- a/lib/cfndsl/aws_types.yaml
+++ b/lib/cfndsl/aws_types.yaml
@@ -94,6 +94,7 @@ Resources:
   "AWS::EC2::Instance" :
    Properties:
     AvailabilityZone: String
+    BlockDeviceMappings: [ BlockDeviceMapping ]
     DisableApiTermination: String
     ImageId: String
     InstanceType: String
